k8s/environments/linode/ingress/exerciselib-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: exerciselib
  namespace: exerciselib
spec:
  hosts:
    - exerciselib.liftnotebook.app
    - exerciselib.totalcomp.mx
  gateways:
    - exerciselib-gateway
  http:
    - match:
        - uri:
            prefix: /v1/
      route:
        - destination:
            host: exerciselib
            port:
              number: 4000
    - route:
        - destination:
            host: libconsole
            port:
              number: 80
