k8s/environments/linode/ingress/liftnotebook-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: liftnotebook
  namespace: liftnotebook
spec:
  hosts:
    - liftnotebook.app
    - liftnotebook.totalcomp.mx
  gateways:
    - liftnotebook-gateway
  http:
    - route:
        - destination:
            host: webapp
            port:
              number: 80
